--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 media_folder: "/dist/assets/images"
 public_folder: "/src/assets/images"
 collections:
-  - name: "BlogEs"
+  - name: "BlogEn"
     label: "Publicación en inglés"
     folder: "src/blog/posts"
     create: true
