--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: git-gateway
   branch: main
-media_folder: "/dist/assets/images"
-public_folder: "/src/assets/images"
+media_folder: "/src/assets/images"
+public_folder: "/dist/assets/images"
 collections:
   - name: "BlogEn"
     label: "Publicación en inglés"
