--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: main
 media_folder: "/src/assets/images"
-public_folder: "/dist/assets/images"
+public_folder: "/assets/images"
 collections:
   - name: "BlogEn"
     label: "Publicación en inglés"
